.antlr/SudokuParser.java
// Generated from /Users/dhan/Documents/GitHub/TouchSudoku.github.io/Sudoku.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SudokuParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, NUM=7, BOX=8, COL=9, ROW=10, 
		CELL=11, ANS=12, PUZZLE=13, WS=14;
	public static final int
		RULE_sudoku = 0, RULE_puzzle = 1, RULE_solution = 2, RULE_answer = 3, 
		RULE_logic = 4, RULE_double_clue = 5, RULE_single_target = 6, RULE_simple_target = 7, 
		RULE_double_target = 8, RULE_filler = 9, RULE_single_filler = 10, RULE_multi_filler = 11, 
		RULE_unit_filler = 12, RULE_double_filler = 13, RULE_pointer = 14, RULE_simple_pointer = 15, 
		RULE_unit_pointer = 16, RULE_double_pointer = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"sudoku", "puzzle", "solution", "answer", "logic", "double_clue", "single_target", 
			"simple_target", "double_target", "filler", "single_filler", "multi_filler", 
			"unit_filler", "double_filler", "pointer", "simple_pointer", "unit_pointer", 
			"double_pointer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'&'", "'='", "'-'", "'+'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "NUM", "BOX", "COL", "ROW", 
			"CELL", "ANS", "PUZZLE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sudoku.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SudokuParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SudokuContext extends ParserRuleContext {
		public PuzzleContext puzzle() {
			return getRuleContext(PuzzleContext.class,0);
		}
		public SolutionContext solution() {
			return getRuleContext(SolutionContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(SudokuParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(SudokuParser.WS, i);
		}
		public SudokuContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sudoku; }
	}

	public final SudokuContext sudoku() throws RecognitionException {
		SudokuContext _localctx = new SudokuContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sudoku);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			puzzle();
			setState(37);
			match(T__0);
			setState(38);
			solution();
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(39);
				match(WS);
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PuzzleContext extends ParserRuleContext {
		public TerminalNode PUZZLE() { return getToken(SudokuParser.PUZZLE, 0); }
		public PuzzleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_puzzle; }
	}

	public final PuzzleContext puzzle() throws RecognitionException {
		PuzzleContext _localctx = new PuzzleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_puzzle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(PUZZLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SolutionContext extends ParserRuleContext {
		public AnswerContext answer() {
			return getRuleContext(AnswerContext.class,0);
		}
		public LogicContext logic() {
			return getRuleContext(LogicContext.class,0);
		}
		public SolutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_solution; }
	}

	public final SolutionContext solution() throws RecognitionException {
		SolutionContext _localctx = new SolutionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_solution);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			answer();
			setState(48);
			match(T__1);
			setState(49);
			logic();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnswerContext extends ParserRuleContext {
		public TerminalNode ANS() { return getToken(SudokuParser.ANS, 0); }
		public AnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answer; }
	}

	public final AnswerContext answer() throws RecognitionException {
		AnswerContext _localctx = new AnswerContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_answer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(ANS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicContext extends ParserRuleContext {
		public Single_targetContext single_target() {
			return getRuleContext(Single_targetContext.class,0);
		}
		public List<PointerContext> pointer() {
			return getRuleContexts(PointerContext.class);
		}
		public PointerContext pointer(int i) {
			return getRuleContext(PointerContext.class,i);
		}
		public Double_targetContext double_target() {
			return getRuleContext(Double_targetContext.class,0);
		}
		public List<Double_clueContext> double_clue() {
			return getRuleContexts(Double_clueContext.class);
		}
		public Double_clueContext double_clue(int i) {
			return getRuleContext(Double_clueContext.class,i);
		}
		public LogicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logic; }
	}

	public final LogicContext logic() throws RecognitionException {
		LogicContext _localctx = new LogicContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_logic);
		int _la;
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOX:
			case COL:
			case ROW:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				single_target();
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(54);
					match(T__2);
					setState(55);
					pointer();
					}
					}
					setState(60);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				double_target();
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2 || _la==T__3) {
					{
					{
					setState(62);
					double_clue();
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Double_clueContext extends ParserRuleContext {
		public Double_pointerContext double_pointer() {
			return getRuleContext(Double_pointerContext.class,0);
		}
		public Double_fillerContext double_filler() {
			return getRuleContext(Double_fillerContext.class,0);
		}
		public Double_clueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_clue; }
	}

	public final Double_clueContext double_clue() throws RecognitionException {
		Double_clueContext _localctx = new Double_clueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_double_clue);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(T__2);
				setState(71);
				double_pointer();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(T__3);
				setState(73);
				double_filler();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Single_targetContext extends ParserRuleContext {
		public Simple_targetContext simple_target() {
			return getRuleContext(Simple_targetContext.class,0);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public Single_targetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_target; }
	}

	public final Single_targetContext single_target() throws RecognitionException {
		Single_targetContext _localctx = new Single_targetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_single_target);
		try {
			int _alt;
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				simple_target();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				simple_target();
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(78);
						match(T__3);
						setState(79);
						filler();
						}
						} 
					}
					setState(84);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_targetContext extends ParserRuleContext {
		public TerminalNode BOX() { return getToken(SudokuParser.BOX, 0); }
		public TerminalNode COL() { return getToken(SudokuParser.COL, 0); }
		public TerminalNode ROW() { return getToken(SudokuParser.ROW, 0); }
		public Simple_targetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_target; }
	}

	public final Simple_targetContext simple_target() throws RecognitionException {
		Simple_targetContext _localctx = new Simple_targetContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_simple_target);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Double_targetContext extends ParserRuleContext {
		public List<Simple_targetContext> simple_target() {
			return getRuleContexts(Simple_targetContext.class);
		}
		public Simple_targetContext simple_target(int i) {
			return getRuleContext(Simple_targetContext.class,i);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public List<PointerContext> pointer() {
			return getRuleContexts(PointerContext.class);
		}
		public PointerContext pointer(int i) {
			return getRuleContext(PointerContext.class,i);
		}
		public Double_targetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_target; }
	}

	public final Double_targetContext double_target() throws RecognitionException {
		Double_targetContext _localctx = new Double_targetContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_double_target);
		int _la;
		try {
			int _alt;
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				match(T__4);
				setState(90);
				match(T__4);
				setState(91);
				simple_target();
				setState(92);
				match(T__3);
				setState(93);
				simple_target();
				setState(94);
				match(T__5);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(95);
					match(T__3);
					setState(96);
					filler();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(102);
					match(T__2);
					setState(103);
					pointer();
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(109);
				match(T__5);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(T__4);
				setState(112);
				simple_target();
				setState(113);
				match(T__3);
				setState(114);
				simple_target();
				setState(115);
				match(T__5);
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(116);
						match(T__3);
						setState(117);
						filler();
						}
						} 
					}
					setState(122);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(123);
						match(T__2);
						setState(124);
						pointer();
						}
						} 
					}
					setState(129);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FillerContext extends ParserRuleContext {
		public Single_fillerContext single_filler() {
			return getRuleContext(Single_fillerContext.class,0);
		}
		public Multi_fillerContext multi_filler() {
			return getRuleContext(Multi_fillerContext.class,0);
		}
		public Unit_fillerContext unit_filler() {
			return getRuleContext(Unit_fillerContext.class,0);
		}
		public FillerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filler; }
	}

	public final FillerContext filler() throws RecognitionException {
		FillerContext _localctx = new FillerContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_filler);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				single_filler();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				multi_filler();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				unit_filler();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				match(T__4);
				setState(136);
				unit_filler();
				setState(137);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Single_fillerContext extends ParserRuleContext {
		public TerminalNode CELL() { return getToken(SudokuParser.CELL, 0); }
		public Single_fillerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_filler; }
	}

	public final Single_fillerContext single_filler() throws RecognitionException {
		Single_fillerContext _localctx = new Single_fillerContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_single_filler);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CELL:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				match(CELL);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(T__4);
				setState(143);
				match(CELL);
				setState(144);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Multi_fillerContext extends ParserRuleContext {
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public Multi_fillerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multi_filler; }
	}

	public final Multi_fillerContext multi_filler() throws RecognitionException {
		Multi_fillerContext _localctx = new Multi_fillerContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_multi_filler);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(T__4);
			setState(148);
			filler();
			setState(151); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(149);
				match(T__3);
				setState(150);
				filler();
				}
				}
				setState(153); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			setState(155);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Unit_fillerContext extends ParserRuleContext {
		public Single_targetContext single_target() {
			return getRuleContext(Single_targetContext.class,0);
		}
		public List<PointerContext> pointer() {
			return getRuleContexts(PointerContext.class);
		}
		public PointerContext pointer(int i) {
			return getRuleContext(PointerContext.class,i);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public Unit_fillerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit_filler; }
	}

	public final Unit_fillerContext unit_filler() throws RecognitionException {
		Unit_fillerContext _localctx = new Unit_fillerContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_unit_filler);
		int _la;
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				match(T__4);
				setState(158);
				single_target();
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(159);
					match(T__2);
					setState(160);
					pointer();
					}
					}
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(166);
				match(T__5);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				match(T__4);
				setState(169);
				single_target();
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(170);
					match(T__3);
					setState(171);
					filler();
					}
					}
					setState(176);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(177);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Double_fillerContext extends ParserRuleContext {
		public Single_targetContext single_target() {
			return getRuleContext(Single_targetContext.class,0);
		}
		public List<FillerContext> filler() {
			return getRuleContexts(FillerContext.class);
		}
		public FillerContext filler(int i) {
			return getRuleContext(FillerContext.class,i);
		}
		public Double_fillerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_filler; }
	}

	public final Double_fillerContext double_filler() throws RecognitionException {
		Double_fillerContext _localctx = new Double_fillerContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_double_filler);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(T__4);
			setState(182);
			single_target();
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(183);
				match(T__3);
				setState(184);
				filler();
				setState(185);
				match(T__3);
				setState(186);
				filler();
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(193);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PointerContext extends ParserRuleContext {
		public Simple_pointerContext simple_pointer() {
			return getRuleContext(Simple_pointerContext.class,0);
		}
		public Unit_pointerContext unit_pointer() {
			return getRuleContext(Unit_pointerContext.class,0);
		}
		public PointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pointer; }
	}

	public final PointerContext pointer() throws RecognitionException {
		PointerContext _localctx = new PointerContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_pointer);
		try {
			setState(197);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CELL:
				enterOuterAlt(_localctx, 1);
				{
				setState(195);
				simple_pointer();
				}
				break;
			case T__4:
			case BOX:
			case COL:
			case ROW:
				enterOuterAlt(_localctx, 2);
				{
				setState(196);
				unit_pointer();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_pointerContext extends ParserRuleContext {
		public TerminalNode CELL() { return getToken(SudokuParser.CELL, 0); }
		public Simple_pointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_pointer; }
	}

	public final Simple_pointerContext simple_pointer() throws RecognitionException {
		Simple_pointerContext _localctx = new Simple_pointerContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_simple_pointer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(199);
			match(CELL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Unit_pointerContext extends ParserRuleContext {
		public Simple_targetContext simple_target() {
			return getRuleContext(Simple_targetContext.class,0);
		}
		public Single_targetContext single_target() {
			return getRuleContext(Single_targetContext.class,0);
		}
		public List<PointerContext> pointer() {
			return getRuleContexts(PointerContext.class);
		}
		public PointerContext pointer(int i) {
			return getRuleContext(PointerContext.class,i);
		}
		public Unit_pointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit_pointer; }
	}

	public final Unit_pointerContext unit_pointer() throws RecognitionException {
		Unit_pointerContext _localctx = new Unit_pointerContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_unit_pointer);
		int _la;
		try {
			setState(213);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOX:
			case COL:
			case ROW:
				enterOuterAlt(_localctx, 1);
				{
				setState(201);
				simple_target();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(202);
				match(T__4);
				setState(203);
				single_target();
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(204);
					match(T__2);
					setState(205);
					pointer();
					}
					}
					setState(210);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(211);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Double_pointerContext extends ParserRuleContext {
		public Single_targetContext single_target() {
			return getRuleContext(Single_targetContext.class,0);
		}
		public List<PointerContext> pointer() {
			return getRuleContexts(PointerContext.class);
		}
		public PointerContext pointer(int i) {
			return getRuleContext(PointerContext.class,i);
		}
		public Double_pointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_pointer; }
	}

	public final Double_pointerContext double_pointer() throws RecognitionException {
		Double_pointerContext _localctx = new Double_pointerContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_double_pointer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(215);
			match(T__4);
			setState(216);
			single_target();
			setState(221);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(217);
				match(T__2);
				setState(218);
				pointer();
				}
				}
				setState(223);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(224);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}